# qgis-move-point-to-next-rect

./: .env  Makefile  README.md  pyproject.toml
data/: points.gpkg  rectangles.gpkg
src/: move_point.py
