[project]
name = "qgis-move-point-to-next-rect"
version = "0.1.0"
description = ""
authors = [
    {name = "mzarov",email = "zarovdeveloper@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt5 (>=5.15.11,<6.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ruff (>=0.12.11,<0.13.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
